# python-tools

./: Agents.md  README.md  compare_runs.py  pyproject.toml
.github/workflows/: static.yml  test.yml
tests/: conftest.py  test_compare_reports.py  test_html_extraction.py  test_html_feature_map.py  test_load_report.py  test_metrics.py  test_row.py  test_utils.py
tools/config-utils/: README.md  cli.py  pyproject.toml
tools/locust-compare/: compare_runs.py
tools/wt-worktree/: PRD.md  README.md  notes.md  pyproject.toml
tools/wt-worktree/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_git.py  test_worktree.py
tools/wt-worktree/wt/: __init__.py  __main__.py  cli.py  config.py  git.py  prompts.py  shell.py  worktree.py
