[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wt-worktree"
version = "0.1.0"
description = "CLI tool for managing git worktrees in parallel development workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ankit", email = "dev-ankit@users.noreply.github.com"}
]
keywords = ["git", "worktree", "cli", "development", "parallel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
wt = "wt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["wt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=wt --cov-report=term-missing"
